<resources>
    <string name="app_name">UniBA konto</string>
    <string name="prompt_username">Login UK</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_incorrect_username_or_password">Login or password is incorrect or something went wrong :(</string>
    <string name="error_field_required">This field is required</string>
    <string name="logout">Log out</string>
    <string name="connection_failed">Connection failed :(</string>
    <string name="title_e_wallet">E-wallet</string>
    <string name="refreshed">Refreshed: %s</string>
    <string name="never">never</string>
    <string name="refreshing">Refreshing…</string>
    <string name="refresh">Refresh</string>
    <string name="title_card">Card number (ISIC)</string>
    <string name="valid_until">Valid until</string>
    <string name="ok">OK</string>
    <string name="no_cards">No cards found :(</string>
    <string name="try_logout">Try to log out and log back in</string>
    <string name="facebook_app_id">1911896499081932</string>
    <string name="fb_login_protocol_scheme">fb1911896499081932</string>
    <string name="above_fb_login_button">To view images of meals, you need to</string>
    <string name="no_fb_images">No images for today\'s menu.</string>
    <string name="internal_error">Internal error :(</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Logo</string>
    <string name="my_statistics">My Statistics</string>
    <string name="e_wallet_menus"><![CDATA[E-wallet & Menus]]></string>
    <string name="fb_venza">FB Venza</string>
    <string name="ig_venza">IG Venza</string>
    <string name="fb_eam"><![CDATA[FB Eat & Meet]]></string>
    <string name="ig_eam"><![CDATA[IG Eat & Meet]]></string>
    <string name="eam"><![CDATA[Eat & Meet]]></string>
    <string name="venza">Venza</string>
    <string name="total_spent">Total Spent</string>
    <string name="on_food">On Food</string>
    <string name="on_accommodation">On Accommodation</string>
    <string name="on_other">On Other</string>
    <string name="whenIVisitCanteens">When I Visit Canteens</string>
    <string name="visitsCount">Visits</string>
    <string name="whatIEatMostly">What I Eat Mostly</string>
    <string name="chicken">Chicken</string>
    <string name="pork">Pork</string>
    <string name="beef">Beef</string>
    <string name="rice">Rice</string>
    <string name="potatoes">Potatoes</string>
    <string name="soup">Soup</string>
    <string name="salad">Salad</string>
    <string name="turkey">Turkey</string>
    <string name="cheese">Cheese</string>
    <string name="drink">Drinks</string>
    <string name="fish">Fish</string>
    <string name="other">Other</string>
    <string name="knodel">Knödel</string>
    <string name="eggBarley">Egg Barley</string>
    <string name="count">Count</string>
    <string name="set_theme">Set theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_theme">System default</string>
    <string name="hide_soc_networks">Hide soc. networks</string>
    <string name="show_soc_networks">Show soc. networks</string>
</resources>
