<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ewallet"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/e_wallet_menus"/>
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_statistics"
            android:title="@string/my_statistics"/>
    </group>

    <item
        android:id="@+id/logout_section"
        android:title="@string/title_e_wallet">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout"
                    android:checkable="false"/>
            </group>
        </menu>
    </item>

</menu>
