<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_show_card"
        android:orderInCategory="1"
        android:title="@string/title_card"
        android:icon="@drawable/ic_card"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_menu_refresh"
        android:orderInCategory="2"
        android:title="@string/refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_menu_set_theme"
        android:orderInCategory="3"
        android:title="@string/set_theme"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_menu_hide_soc_networks"
        android:orderInCategory="4"
        android:title=""
        app:showAsAction="never"/>
</menu>
